# marketsAI

./: .editorconfig  .flake8  .gitignore  Durable_SA_endTTB_test_June7_DQN.csv  Durable_SA_sgm_adj_test_June7_DQN.csv  Durable_sgm_adj_test_June8_DQN.csv  OUTPUT_PATH_TABLESnative_5hh_cap_const_plan_run_Aug26_PPOTABLE.tex  README.md  challenges_jup.ipynb  collusion_IR_DQN.csv  collusion_QL_April23.csv  collusion_QL_April27.csv  collusion_QL_May7.csv  collusion_QL_May7_run.csv  collusion_QL_May7_run_test.csv  collusion_QL_Q  collusion_QL_baseline.csv  collusion_QL_test_April13.csv  econ_QL_May7_run.csv  econ_QL_Q.REMOVED.git-id  gm_IR_PPO_June21.csv  marketsAI_challenges.py  pyproject.toml  requirements.txt  save_Q_test  setup.py  sgm2_test_IR_PPO_June10.csv  sgm_IR_PPO_June11.csv  sgm_small_2_IR_PPO_June10.csv  sgm_small_IR_PPO_June10.csv  sgm_stoch_IR_PPO_June11.csv  sgm_stoch_test_IR_PPO_June10.csv  sgm_toch_small_IR_PPO_June10.csv
.github/workflows/: main.yml
agents/: readme.md
marketsai/: experiments_log.xlsx  graphs.xlsx  nonlinear_solver.py  resultsexp_INFO_native_1hh_cap_plan_ma_test_Aug23_PPO.csv  resultsexp_INFO_native_multi_hh_cap_plan_ma_test_Aug23_PPO.csv  resultsprogress_native_1hh_cap_plan_ma_test_Aug23_PPO.csv  resultsprogress_native_multi_hh_cap_plan_ma_test_Aug23_PPO.csv  utils.py
marketsai/Documents/: #HetAgents_Jiacheng.lyx#  HetAgents_Jiacheng.lyx  HetAgents_Jiacheng.lyx~  MarketsAI.bib  MarketsAI_pp.blg  MarketsAI_pp.fdb_latexmk  MarketsAI_pp.fls  MarketsAI_pp.out  MarketsAI_pp_August.aux  MarketsAI_pp_August.blg  MarketsAI_pp_August.out  MarketsAI_pp_August.tex  MarketsAI_pp_July.aux  MarketsAI_pp_July.bbl  MarketsAI_pp_July.blg  MarketsAI_pp_July.out  MarketsAI_pp_July.tex  MarketsAI_pp_June.aux  MarketsAI_pp_June.blg  MarketsAI_pp_June.tex  Matias_advance_report_Stijn.tex  Model_notes.aux  Model_notes.out  Model_notes.tex  Model_notes_August.aux  Model_notes_August.out  Model_notes_August.tex  Model_notes_July.aux  Model_notes_July.out  Model_notes_July.tex  RE_Supply_sl_June.aux  RE_Supply_sl_June.nav  RE_Supply_sl_June.out  RE_Supply_sl_June.snm  RE_Supply_sl_June.tex  RE_Supply_sl_June.toc  TwoSector_notes.aux  TwoSector_notes.out  TwoSector_notes.tex  marketsAI_sl_August.aux  (+12 more)
marketsai/Econ_algos/: IterRslt_capital_planner_1hh_10.mat  IterRslt_capital_planner_1hh_100.mat  IterRslt_capital_planner_1hh_110.mat  IterRslt_capital_planner_1hh_118.mat  IterRslt_capital_planner_1hh_20.mat  IterRslt_capital_planner_1hh_2z_10.mat  IterRslt_capital_planner_1hh_2z_100.mat  IterRslt_capital_planner_1hh_2z_110.mat  IterRslt_capital_planner_1hh_2z_120.mat  IterRslt_capital_planner_1hh_2z_124.mat  IterRslt_capital_planner_1hh_2z_125.mat  IterRslt_capital_planner_1hh_2z_20.mat  IterRslt_capital_planner_1hh_2z_30.mat  IterRslt_capital_planner_1hh_2z_40.mat  IterRslt_capital_planner_1hh_2z_50.mat  IterRslt_capital_planner_1hh_2z_60.mat  IterRslt_capital_planner_1hh_2z_70.mat  IterRslt_capital_planner_1hh_2z_80.mat  IterRslt_capital_planner_1hh_2z_90.mat  IterRslt_capital_planner_1hh_30.mat  IterRslt_capital_planner_1hh_40.mat  IterRslt_capital_planner_1hh_50.mat  IterRslt_capital_planner_1hh_60.mat  IterRslt_capital_planner_1hh_70.mat  IterRslt_capital_planner_1hh_80.mat  IterRslt_capital_planner_1hh_90.mat  IterRslt_capital_planner_2hh_10.mat.REMOVED.git-id  IterRslt_capital_planner_2hh_20.mat.REMOVED.git-id  IterRslt_capital_planner_2hh_30.mat.REMOVED.git-id  IterRslt_capital_planner_2hh_40.mat.REMOVED.git-id  IterRslt_rbc_10.mat  (+72 more)
(+363 files in other folders)
