[tool.poetry]
name = "marketsai"
version = "0.1.0"
description = "marketsAI is a modular framework designed to simulate economies that are composed of multiple interconnected markets."
authors = ["Matias Covarrubias <matias.covarrubias@nyu.edu>"]
maintainers = ["Matias Covarrubias <matias.covarrubias@nyu.edu>", "Agustin Covarrubias <agucova@uc.cl>"]
readme = "README.md"
homepage = "https://marketsai.org"
repository = "https://github/marketsAI/marketsAI"
include = ["README.md"]

[tool.poetry.urls]
issues = "https://github.com/marketsAI/marketsAI/issues"

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.18.0"
numpy = "^1.20.0"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.0"
coverage = {extras = ["toml"], version = "^5.4"}
flake8-black = "^0.2.1"
flake8-pytest-style = "^1.3.0"

[tool.pytest.ini_options]
addopts = "--cov=marketsai"
minversion = 6.0
required_plugins = ["pytest-cov", "pytest-sugar", "pytest-xdist"]

[tool.coverage.run]
source = ["marketsai"]
omit = ["tests/*", ".venv/*"]
concurrency = ["multiprocessing"]
parallel = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
