[tool.poetry]
name = "marketsai"
version = "0.1.0"
description = "marketsAI is a modular framework designed to simulate economies that are composed of multiple interconnected markets."
authors = ["Matías Covarrubias <mcovarrubiasi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
ray = {version = "^1.8.0", extras = ["default", "rllib", "tune"]}
gym = "^0.21.0"
scikit-learn = "^1.0.1"
seaborn = "^0.11.2"
numpy = "^1.21.4"
torch = "^1.10.0"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^21.12b0"}
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
ipykernel = "^6.5.1"

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
